--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "repository": "https://github.com/LambdaSchool/node-db1-project",
     "dependencies": {
         "express": "^4.17.1",
-        "knex": "^0.21.2",
+        "knex": "^0.21.6",
         "pg": "^8.3.0",
+        "sqlite": "^4.0.15",
         "sqlite3": "^5.0.0"
     },
     "devDependencies": {
